tests/resource/valid/definition/function_with_nested_if.mamba
def f(x: Int) -> Int =>
    if x > 10 then
        if x > 30 then
            x + 1
        else
            x - 1
    else
        x
