tests/resource/invalid/type/operation/reassign_to_nullable.mamba
def x: Int? := None

x += 10
